test/mpi/errors/attr/Makefile.sm
INCLUDES = -I../../include -I${srcdir}/../../include
LDADD = ../../util/mtest.o
DEPADD = @MPILIBLOC@ ../../util/mtest.o
smvar_do_sharedlibs = 0

# Use extra programs to list programs that should not be built by default.
EXTRA_PROGRAMS       = 

keyvalmis_SOURCES    = keyvalmis.c

../../util/mtest.o:
	(cd ../../util && $(MAKE) mtest.o)
